most recent files

--- a/index.html
+++ b/index.html
@@ -12,26 +12,43 @@
 <body>
     <h1>Film Cabinet</h1>
     <main>
+
         <section>
-            <h2>Film Cabinet</h2>
-            <div class="categ">
-                <h2 class="categ">Categories</h2>
+            <div>
                 <ul>
-                    <li class="categ"><a href="">Comedy</a></li>
-                    <li class="categ"><a href="">Horror</a></li>
-                    <li class="categ"><a href="">Action</a></li>
+                    <li class="list"><a href="">Comedy</a></li>
+                    <br>
+                    <li class="list"><a href="">Horror</a></li>
+                    <br>
+                    <li class="list"><a href="">Action</a></li>
                 </ul>
             </div>
         </section>
-        <div id="search">
-            <form action="filmcabinet.com">
-                <input type="search" placeholder="search movie" name="s" >
-                <button>Open</button>
+
+        <h2 class="Ca"><a href="/pages/cabinets.html">Cabinets</a></h2>
+    
+        <nav>
+            <ul>
+                <li id="search"> <a href="./pages/signin.html">Log In</a></li>
+                <br>
+                <br>
+                <li id="search"> <a href="">Random</a></li>
+                <br>
+                <br>
+                <li id="search"> <a href="./pages/survey.html">Questionnaire</a></li>
+                <br>
+                <br>
+                <li id="search"> <a href="">Settings</a></li>
+
+            </ul>
+            <form id="type" action="filmcabinet.com">
+                <input type="search" placeholder="search movie" name="s">
+                <button> navigate</button>
             </form>
-        </div>
+
+        </nav>
 
     </main>
-
 </body>
 
 </html
